--- a/public/styles.css
+++ b/public/styles.css
@@ -23,9 +23,19 @@ img {
   height: 90px;
 }
 
+h1 {
+  color: #26a9c1;
+  padding: 2rem;
+  max-width: 40vw;
+  margin-top: 30vh;
 
+  font-size: 4.3rem;
 
-
+  border: 3px solid rgba(23, 21, 21, 0.8);
+  border-bottom: 5px solid rgba(23, 21, 21, 0.8);
+  border-radius: 10px;
+  box-shadow: 0px 6px 5px rgba(38, 169, 193, 0.7);
+}
 
 /* ----------------------------------------------------------------- PRIMITIVES ------------------------------------------------------------- */
 /* -----------------------------------------------------------------            ------------------------------------------------------------- */
