--- a/public/styles.css
+++ b/public/styles.css
@@ -26,8 +26,8 @@ img {
 h1 {
   color: #26a9c1;
   padding: 2rem;
-  max-width: 40vw;
-  margin-top: 30vh;
+  margin-top: 5rem;
+  text-align: center;
 
   font-size: 4.3rem;
 
@@ -35,6 +35,28 @@ h1 {
   border-bottom: 5px solid rgba(23, 21, 21, 0.8);
   border-radius: 10px;
   box-shadow: 0px 6px 5px rgba(38, 169, 193, 0.7);
+}
+
+#signup,
+#login {
+  font-size: 3rem;
+  text-align: center;
+  /* color: rgba(134, 38, 193); */
+
+  padding: 0.5rem;
+
+  border: 1px solid rgba(23, 21, 21, 0.8);
+  border-bottom: 3px solid rgba(23, 21, 21, 0.8);
+  border-radius: 10px;
+  box-shadow: 0px 3px 3px rgba(47, 220, 223, 0.7);
+
+  transition: all 0.3s;
+}
+
+#signup:hover,
+#login:hover {
+  transform: translateY(-3%);
+  box-shadow: 5px 5px 5px rgba(134, 38, 193, 0.7);
 }
 
 /* ----------------------------------------------------------------- PRIMITIVES ------------------------------------------------------------- */
@@ -49,7 +71,7 @@ h1 {
 }
 
 .width-sm {
-  max-width: 20rem;
+  max-width: 25rem;
 }
 
 .width-md {
