--- a/public/styles.css
+++ b/public/styles.css
@@ -59,6 +59,17 @@ h1 {
   box-shadow: 5px 5px 5px rgba(134, 38, 193, 0.7);
 }
 
+/* ----------------------- FORMS */
+input {
+  outline: none;
+  margin-left: 0.5rem;
+  padding: 0.5rem;
+  border: 2px solid rgba(23, 21, 21, 0.8);
+  border-bottom: 3px solid rgba(23, 21, 21, 0.8);
+  border-radius: 6px;
+  box-shadow: 0px 4px 4px rgba(247, 136, 18, 0.5);
+}
+
 /* ----------------------------------------------------------------- PRIMITIVES ------------------------------------------------------------- */
 /* -----------------------------------------------------------------            ------------------------------------------------------------- */
 /* -----------------------------------------------------------------            ------------------------------------------------------------- */
